--- a/src/Vista/Estadisticas.fxml
+++ b/src/Vista/Estadisticas.fxml
@@ -1,53 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="227.0" prefWidth="585.0" style="-fx-background-color: #6fd7de; -fx-border-color: black; -fx-border-width: 5;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Vista.ControladoraEstadisticas">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="370.0" prefWidth="585.0" style="-fx-background-color: #6fd7de; -fx-border-color: black; -fx-border-width: 5;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Vista.ControladoraEstadisticas">
    <children>
-      <Label layoutX="24.0" layoutY="30.0" text="Número total de donantes">
-         <font>
-            <Font name="Impact" size="20.0" />
-         </font>
-      </Label>
-      <Label layoutX="24.0" layoutY="54.0" text="Número total de donantes masculinos">
-         <font>
-            <Font name="Impact" size="20.0" />
-         </font>
-      </Label>
-      <Label layoutX="24.0" layoutY="78.0" text="Número total de donantes femeninos">
-         <font>
-            <Font name="Impact" size="20.0" />
-         </font>
-      </Label>
-      <Label layoutX="24.0" layoutY="102.0" text="Número total de donantes femeninos">
-         <font>
-            <Font name="Impact" size="20.0" />
-         </font>
-      </Label>
-      <Label layoutX="24.0" layoutY="126.0" text="Número total de donantes que viven en Valdemoro">
-         <font>
-            <Font name="Impact" size="20.0" />
-         </font>
-      </Label>
-      <Label layoutX="24.0" layoutY="150.0" text="Número total de donantes aptos">
-         <font>
-            <Font name="Impact" size="20.0" />
-         </font>
-      </Label>
-      <Label layoutX="24.0" layoutY="174.0" text="Número total de donantes españoles">
-         <font>
-            <Font name="Impact" size="20.0" />
-         </font>
-      </Label>
-      <TextField layoutX="483.0" layoutY="30.0" prefHeight="25.0" prefWidth="43.0" />
-      <TextField fx:id="consulta2" layoutX="483.0" layoutY="54.0" prefHeight="25.0" prefWidth="43.0" />
-      <TextField fx:id="consulta3" layoutX="483.0" layoutY="78.0" prefHeight="25.0" prefWidth="43.0" />
-      <TextField fx:id="consulta4" layoutX="483.0" layoutY="102.0" prefHeight="25.0" prefWidth="43.0" />
-      <TextField fx:id="consulta5" layoutX="483.0" layoutY="126.0" prefHeight="25.0" prefWidth="43.0" />
-      <TextField fx:id="consulta6" layoutX="483.0" layoutY="150.0" prefHeight="25.0" prefWidth="43.0" />
-      <TextField fx:id="consulta7" layoutX="483.0" layoutY="174.0" prefHeight="25.0" prefWidth="43.0" />
+      <Button fx:id="mostrar" layoutX="217.0" layoutY="28.0" mnemonicParsing="false" onAction="#mostrar" prefHeight="45.0" prefWidth="151.0" text="MOSTRAR DATOS" />
+      <TableView fx:id="tabla1" layoutX="93.0" layoutY="120.0" prefHeight="77.0" prefWidth="200.0">
+        <columns>
+          <TableColumn fx:id="total" prefWidth="199.0" text="Total Donantes" />
+        </columns>
+      </TableView>
+      <TableView fx:id="tabla2" layoutX="293.0" layoutY="120.0" prefHeight="77.0" prefWidth="200.0">
+        <columns>
+          <TableColumn fx:id="masc" prefWidth="199.0" text="Total Donantes Masculinos" />
+        </columns>
+      </TableView>
+      <TableView fx:id="tabla3" layoutX="93.0" layoutY="197.0" prefHeight="77.0" prefWidth="200.0">
+        <columns>
+          <TableColumn fx:id="fem" prefWidth="199.0" text="Total Donantes Femeninos" />
+        </columns>
+      </TableView>
+      <TableView fx:id="tabla4" layoutX="293.0" layoutY="197.0" prefHeight="77.0" prefWidth="200.0">
+        <columns>
+          <TableColumn fx:id="valde" prefWidth="199.0" text="Total Donantes Valdemoro" />
+        </columns>
+      </TableView>
+      <TableView fx:id="tabla5" layoutX="93.0" layoutY="274.0" prefHeight="77.0" prefWidth="200.0">
+        <columns>
+          <TableColumn fx:id="aptos" prefWidth="199.0" text="Total Donantes Aptos" />
+        </columns>
+      </TableView>
+      <TableView fx:id="tabla6" layoutX="293.0" layoutY="274.0" prefHeight="77.0" prefWidth="200.0">
+        <columns>
+          <TableColumn fx:id="esp" prefWidth="199.0" text="Total Donantes Españoles" />
+        </columns>
+      </TableView>
    </children>
 </AnchorPane>
